--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 /* Base styling */
 body {
   font-family: 'Roboto', sans-serif;
@@ -46,10 +45,9 @@ nav ul li a {
 /* Section styling */
 section {
   width: 95%;
-  max-width: 2000px;
-  min-width: 1200px;
-  margin: 1rem auto; /* auto centers it horizontally */
-  padding: 2rem 5rem;  /* 2rem top/bottom, 2rem left/right */
+  max-width: 1200px;
+  margin: 1rem auto;
+  padding: 2rem 1rem;
   background: #fff;
   box-sizing: border-box;
 }
