--- a/styles.css
+++ b/styles.css
@@ -25,15 +25,15 @@ nav {
 }
 
 nav ul {
-  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  gap: 0.5rem;
 }
-
 nav ul li {
-  margin: 0 1rem;
+  width: 45%;
+  text-align: center;
+  margin: 0.3rem 0;
 }
 
 nav ul li a {
@@ -325,16 +325,13 @@ ul.skills-list li {
 
 .floating-nav ul {
   display: flex;
-  justify-content: center;
-  gap: 1rem;
-  list-style: none;
-  padding: 0;
-  margin: 0;
   flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 0.5rem;
 }
 
 .floating-nav li {
-  margin: 0;
+  flex: 1 1 45%;
 }
 
 .floating-nav a {
