--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ body {
 
 /* Navigation bar */
 nav {
-  position: sticky;
+  position: fixed;
+  width: 100%;
   top: 0;
   flex-direction: row;
   flex-wrap: wrap;
