--- a/styles.css
+++ b/styles.css
@@ -253,6 +253,10 @@ footer {
   border: none;
 }
 
+section.pdf-viewer {
+  margin-top: 6rem;
+}
+
 .timeline {
   position: relative;
   margin-top: 2rem;
@@ -451,9 +455,18 @@ ul.skills-list li {
     scroll-margin-top: 20rem;
   }
 
+  .pdf-viewer p {
+    margin-top: 1rem; /* smaller than 4rem */
+    font-size: 1rem;
+  }
+
   .pdf-viewer iframe {
-      height: 75vh;
-    }
+    height: 75vh;
+  }
+  
+  section.pdf-viewer {
+    margin-top: 4rem;
+  }
 }
   
 
