--- a/styles.css
+++ b/styles.css
@@ -521,10 +521,9 @@ video-highlight {
   flex-wrap: wrap;
   align-items: flex-start; 
   margin: 2rem;
-  gap: 2rem;
   padding: 0.5rem 0.5rem;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .video-thumbnail {
@@ -707,6 +706,7 @@ video-highlight {
 
   .video-description {
     width: 100%;
+    margin-top: 0.1rem;
   }
 }
   
