--- a/styles.css
+++ b/styles.css
@@ -521,8 +521,9 @@ ul.skills-list li {
   align-items: flex-start; 
   margin: 0.5rem 0rem;
   padding: 0.5rem 0.5rem;
+  border-left: 4px solid #005599;
   border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 }
 
 .video-thumbnail {
